websockets/kubernetes/comments-service.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    name: comments
  ports:
    - name: comments
      protocol: TCP
      port: 3000
      targetPort: 3000
