websockets/kubernetes/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: "true"
      nginx.ingress.kubernetes.io/websocket-services: "query-service"
spec:
  rules:
    - host: spotty.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: authentication-service
              servicePort: 3000
          - path: /api/spots/?(.*)
            backend:
              serviceName: spots-service
              servicePort: 3000
          - path: /api/comments/?(.*)
            backend:
              serviceName: comments-service
              servicePort: 3000
          - path: /api/query/?(.*)
            backend:
              serviceName: query-service
              servicePort: 3000
          - path: /socket.io/.*
            backend:
              serviceName: query-service
              servicePort: 3000
          - path: /api/maptoken/?(.*)
            backend:
              serviceName: maptoken-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
